--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@astrojs/preact": "^3.3.0",
     "@astrojs/rss": "^4.0.6",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.8.7",
-    "preact": "^10.22.0"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "preact": "^10.22.0",
+    "tailwindcss": "^3.4.3"
   }
 }
